Refactor a lot of code, make calculator properly functional with display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
     <div id='body'>
-        <div id="display"></div>
+        <div id="display">
+            <p id="firstNumber"></p>
+            <p id="operator"></p>
+            <p id="secondNumber"></p>
+            <p id="result"></p>
+        </div>
         <div id="buttons">
             <button class="clear" value="clear">C</button>
             <button class="operators" value="+">+</button>
