Convert types for correct calculations

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
     <div id='body'>
         <div id="display">
-            <p id="firstNumber"></p>
-            <p id="operator"></p>
-            <p id="secondNumber"></p>
-            <p id="result"></p>
+            <p id="currentNumber"></p>
         </div>
         <div id="buttons">
             <button class="clear" value="clear">C</button>
