Add some styles

--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@
     <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-    <div id='body'>
+    <div id='calculator-body'>
         <div id="display">
             <p id="currentNumber"></p>
         </div>
         <div id="buttons">
-            <button class="clear" value="clear">C</button>
-            <button class="operators" value="+">+</button>
-            <button class="operators" value="-">-</button>
-            <button class="operators" value="*">*</button>
-            <button class="operators" value="/">/</button>
             <button class="numbers" value="1">1</button>
             <button class="numbers" value="2">2</button>
             <button class="numbers" value="3">3</button>
+            <button class="clear" value="clear">C</button>
             <button class="numbers" value="4">4</button>
             <button class="numbers" value="5">5</button>
             <button class="numbers" value="6">6</button>
+            <button class="operators" value="*">*</button>
             <button class="numbers" value="7">7</button>
             <button class="numbers" value="8">8</button>
             <button class="numbers" value="9">9</button>
+            <button class="operators" value="/">/</button>
             <button class="numbers" value="0">0</button>
+            <button class="operators" value="+">+</button>
+            <button class="operators" value="-">-</button>
             <button class="equal" value="=">=</button>
         </div>
     </div>
